--- a/clientes/templates/clientes/lista_clientes.html
+++ b/clientes/templates/clientes/lista_clientes.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>TW Clientes</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
-<table>
+<table class="table">
     <thead>
         <tr>
             <th>Nome: </th>
@@ -23,6 +24,8 @@
         {% endfor %}
     </tbody>
 </table>
+
+<a href="{% url 'cadastrar_cliente' %}"><button class="btn btn-primary">Cadastrar</button></a>
 
 </body>
 </html>
