--- a/clientes/templates/clientes/form_cliente.html
+++ b/clientes/templates/clientes/form_cliente.html
@@ -1,45 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "clientes/base.html" %}
+{% load meus_filtros %}
+{% block titulo %}
+Cadastro  de Clientes
+{% endblock titulo %}
+
+{% block conteudo %}
     <form method="post">
         {% csrf_token %}
-        <div>
+        <div class="form-group">
             {{ form.nome.errors}}
             <label>Nome: </label>
-            {{ form.nome }}
+            {{ form.nome | addclass:'form-control' }}
         </div>
 
-        <div>
+        <div class="form-group">
             {{ form.sexo.errors}}
             <label>Sexo: </label>
-            {{ form.sexo }}
+            {{ form.sexo | addclass:'form-control' }}
         </div>
 
-        <div>
+        <div class="form-group">
             {{ form.data_nascimento.errors}}
             <label>Data Nascimento: </label>
-            {{ form.data_nascimento }}
+            {{ form.data_nascimento | addclass:'form-control' }}
         </div>
 
-        <div>
+        <div class="form-group">
             {{ form.email.errors}}
             <label>Email: </label>
-            {{ form.email }}
+            {{ form.email | addclass:'form-control'}}
         </div>
 
-        <div>
+        <div class="form-group">
             {{ form.profissao.errors}}
             <label>Profissão: </label>
-            {{ form.profissao }}
+            {{ form.profissao | addclass:'form-control'}}
         </div>
 
-        <div>
+        <div class="form-group">
             <input type="submit" name="Cadastrar">
         </div>
     </form>
-</body>
-</html>
+{% endblock conteudo %}
